PROJECT(ImageGraphCut)
CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
ENABLE_LANGUAGE(CXX)

FIND_PACKAGE(ITK REQUIRED)
INCLUDE(${ITK_USE_FILE})

SET(CMAKE_MODULE_PATH ${ImageGraphCut_SOURCE_DIR}/CMake)
FIND_PACKAGE(Metis REQUIRED)

SET(IMAGECUT_SRCS
  ImageGraphCut.cxx
  ImageToGraphFilter.h
  METISTools.cxx
  METISTools.h)

ADD_EXECUTABLE(image_graph_cut ${IMAGECUT_SRCS})
#ADD_EXECUTABLE(gcut_makepts ImageToBoundaryGraph.cxx)

# Configure METIS 
INCLUDE_DIRECTORIES(${METIS_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(image_graph_cut ${METIS_LIBRARIES} ${ITK_LIBRARIES})
#TARGET_LINK_LIBRARIES(gcut_makepts ${ITK_LIBRARIES})
